# pypika-tortoise

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pypika/: __init__.py  analytics.py  dialects.py  enums.py  functions.py  queries.py  terms.py  utils.py
pypika/dialects/: __init__.py  mssql.py  mysql.py  oracle.py  postgresql.py  sqlite.py
pypika_tortoise/: __init__.py  context.py  enums.py  functions.py  queries.py  terms.py  utils.py
pypika_tortoise/dialects/: mssql.py  mysql.py  oracle.py  postgresql.py  sqlite.py
tests/: test_aggregate.py  test_analytic_queries.py  test_create.py  test_criterions.py  test_custom_functions.py  test_data_types.py  test_date_math.py  test_deletes.py  test_drop.py  test_formats.py  test_functions.py  test_groupby_modifiers.py  test_immutability.py  test_inserts.py  test_internals.py  test_joins.py  test_json_attribute_criterion.py  test_negation.py  test_parameter.py  test_poetry_add.py  test_pseudocolumns.py  test_query.py  test_selects.py  test_tables.py  test_terms.py  test_tuples.py  test_updates.py
tests/dialects/: test_mssql.py  test_mysql.py  test_postgresql.py  test_sqllite.py
